Fix mobile scrollbars (Github Issue #3)

--- a/css/woz.css
+++ b/css/woz.css
@@ -313,6 +313,7 @@ a {
 
 .posts-wrapper::-webkit-scrollbar-thumb {
     border: 4px solid black;
+    min-height: 25px;
     background: white;
 }
 
@@ -1242,13 +1243,6 @@ a {
         -ms-flex-pack: distribute;
             justify-content: space-around;
     }
-    .post-wrapper::-webkit-scrollbar {
-        width: auto;
-    }
-    .posts-wrapper::-webkit-scrollbar {
-        width: auto;
-        height: auto;
-    }
     .posts-container {
         position: absolute;
         width: 90%;
@@ -1256,8 +1250,6 @@ a {
         -ms-flex-item-align: center;
             -ms-grid-row-align: center;
             align-self: center;
-        -webkit-box-shadow: none;
-                box-shadow: none;
         height: 60%;
     }
     .taskbar-content {
